--- a/.gitignore
+++ b/.gitignore
@@ -16,7 +16,8 @@ web-build/
 # Temporary files created by Metro to check the health of the file watcher
 .metro-health-check*
 
-.env.json
+.env*.json
 firebase-debug.log
 
 .vscode
+yarn-error.log
