--- a/package.json
+++ b/package.json
@@ -3,22 +3,23 @@
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "export GENERATE_SOURCEMAP=false && expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web",
-    "start:prod": "yarn expo start --no-dev --minify",
+    "env": "env-cmd --file .env.json",
+    "start": "yarn env expo start",
+    "android": "yarn start --android",
+    "ios": "yarn start --ios",
+    "web": "yarn start --web",
+    "start:prod": "yarn start --no-dev --minify",
     "run": "expo run",
     "format:check": "prettier --check './**/*.js'",
     "format:fix": "prettier --write './**/*.js'"
   },
   "dependencies": {
-    "@expo/vector-icons": "^13.0.0",
     "@react-navigation/bottom-tabs": "^6.5.6",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.15",
+    "env-cmd": "^10.1.0",
     "expo": "^48.0.4",
-    "expo-barcode-scanner": "^12.3.1",
+    "expo-barcode-scanner": "12.3.2",
     "expo-status-bar": "^1.4.4",
     "firebase": "^9.17.1",
     "react": "^18.2.0",
