--- a/package.json
+++ b/package.json
@@ -1,15 +1,14 @@
 {
   "name": "bs1",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "env": "env-cmd --file .env.json",
-    "start": "yarn env expo start",
-    "android": "yarn start --android",
-    "ios": "yarn start --ios",
+    "start": "yarn start:dev",
+    "start:dev": "yarn env expo start --dev-client",
+    "android": "yarn env expo run:android",
+    "ios": "yarn env expo run:ios",
     "web": "yarn start --web",
-    "start:prod": "yarn start --no-dev --minify",
-    "run": "expo run",
+    "start:prod": "yarn env expo start --no-dev --minify",
     "format:check": "prettier --check './**/*.js'",
     "format:fix": "prettier --write './**/*.js'"
   },
@@ -18,19 +17,20 @@
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.15",
     "env-cmd": "^10.1.0",
-    "expo": "^48.0.4",
+    "expo": "~48.0.5",
     "expo-barcode-scanner": "12.3.2",
     "expo-status-bar": "^1.4.4",
     "firebase": "^9.17.1",
-    "react": "^18.2.0",
+    "react": "18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
-    "react-native": "^0.71.3",
+    "react-native": "0.71.3",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-paper": "^5.2.0",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
-    "styled-components": "^5.3.6"
+    "styled-components": "^5.3.6",
+    "expo-splash-screen": "~0.18.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
