--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "@react-navigation/bottom-tabs": "^6.5.6",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.15",
+    "eas-cli": "^3.7.2",
     "env-cmd": "^10.1.0",
     "expo": "~48.0.5",
     "expo-barcode-scanner": "12.3.2",
+    "expo-splash-screen": "~0.18.1",
     "expo-status-bar": "^1.4.4",
     "firebase": "^9.17.1",
     "react": "18.2.0",
@@ -29,8 +31,7 @@
     "react-native-paper": "^5.2.0",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
-    "styled-components": "^5.3.6",
-    "expo-splash-screen": "~0.18.1"
+    "styled-components": "^5.3.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
