--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "bs1",
   "version": "1.0.0",
   "scripts": {
-    "env": "env-cmd --file .env.json",
-    "start": "yarn start:dev",
-    "start:dev": "yarn env expo start --dev-client",
-    "android": "yarn env expo run:android",
-    "ios": "yarn env expo run:ios",
+    "start": "expo start --dev-client",
+    "start:local": "yarn expo start",
+    "start:dev": "yarn expo start --dev-client",
+    "android": "yarn expo run:android",
+    "ios": "yarn expo run:ios",
     "web": "yarn start --web",
-    "start:prod": "yarn env expo start --no-dev --minify",
+    "start:prod": "yarn expo start --no-dev --minify",
     "format:check": "prettier --check './**/*.js'",
     "format:fix": "prettier --write './**/*.js'"
   },
@@ -18,11 +18,12 @@
     "@react-navigation/stack": "^6.3.15",
     "eas-cli": "^3.7.2",
     "env-cmd": "^10.1.0",
-    "expo": "~48.0.5",
+    "expo": "~48.0.6",
     "expo-barcode-scanner": "12.3.2",
     "expo-splash-screen": "~0.18.1",
     "expo-status-bar": "^1.4.4",
     "firebase": "^9.17.1",
+    "ios-deploy": "^1.12.1",
     "react": "18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
